--- a/Views/Exceptions/BadRequest.cshtml
+++ b/Views/Exceptions/BadRequest.cshtml
@@ -2,13 +2,13 @@
     ViewData["Title"] = "400 Bad Request";
     Layout = "_SimpleLayout";
 }
-<div class="row mt-5">
-    <div class="col">
-        <div class="card mt-5 card-forbidden">
+<div class="row" style="margin-top:10vh;">
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width:50vh;">
             <div class="card-header">
                 <h5>Server error</h5>
             </div>
-            <div class="card-body mt-2">
+            <div class="card-body">
                 <h2 class="text-danger">400</h2> 
                 <h6>Your request has caused an error.</h6>
                 <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
