--- a/Views/Exceptions/CustomException.cshtml
+++ b/Views/Exceptions/CustomException.cshtml
@@ -3,23 +3,16 @@
     Layout = "_SimpleLayout";
 }
 
-<div class="row mt-5">
-    <div class="col">
-        <div class="card mt-5 card-forbidden">
+<div class="row" style="margin-top:10vh;">
+    <div class="d-flex justify-content-center">
+        <div class="card" style="width:50vh;">
             <div class="card-header">
                 <h5>Server error</h5>
             </div>
-            <div class="card-body mt-2">
+            <div class="card-body">
                 <h6>@TempData["Message"]</h6>
                 <a class="btn-primary btn btn-primary mt-4" asp-controller="Home" asp-action="Index">Got to home</a>
             </div>
         </div>
     </div>
 </div>
-
-
-@section scripts{
-
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-}
