--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -1,11 +1,15 @@
-﻿
+﻿@{
+	string color = User.FindFirst(x => x.Type == "Color").Value;
+}
+
 <div class="dropdown">
-	<button class="btn btn-link text-white dropdown-toggle p-0" style="text-decoration: none;" type="button" id="dropdownMenuUserPanel" data-bs-toggle="dropdown" aria-expanded="false">
+	<button class="btn btn-link dropdown-toggle p-0" style="text-decoration: none; color:@color;" type="button" id="dropdownMenuUserPanel" data-bs-toggle="dropdown" aria-expanded="false">
 	@User.Identity.Name
 	</button>
 	<ul class="dropdown-menu dropdownCustom" aria-labelledby="dropdownMenuUserPanel">
 		<li><a class="dropdown-item" asp-controller="account" asp-action="changepassword">Change password</a></li>
 		<li><a class="dropdown-item" asp-controller="account" asp-action="userlog">Logs</a></li>
+		<li><a class="dropdown-item" asp-controller="account" asp-action="usersettings">Settings</a></li>
 
 		<li>
 			<div class="dropdown-item">
