--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,27 @@
-﻿.text-nowrap {
+﻿.page-container {
+    position: relative;
+    min-height: 100vh;
+}
+
+.content-wrap {
+    padding-bottom: 15rem;
+}
+
+.footerDiv {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5rem;
+    background-color: #262626;
+}
+.pagginationDiv {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10rem;
+}
+
+.text-nowrap {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
