--- a/Views/Admin/UniqueLink.cshtml
+++ b/Views/Admin/UniqueLink.cshtml
@@ -2,9 +2,7 @@
     ViewData["Title"] = "Unique link";
     Layout = "_Layout";
 }
-@{
-    var url = Url.Action("create", "account", new {guid = UniqueLinkService.AddLink()},Context.Request.Scheme);
-}
+@model string
 
 <div class="row" style="margin-top:10vh;">
     <div class="d-flex justify-content-center">
@@ -17,7 +15,7 @@
                     <div class="input-group-prepend">
                     <button class="btn btn-outline-secondary" onclick="myFunction()" type="button">Copy</button>
                     </div>
-                    <input type="text" class="form-control w-25" id="copyFuncion" readonly="readonly" value="@url">
+                    <input type="text" class="form-control w-25" id="copyFuncion" readonly="readonly" value="@Model">
                 </div>
             </div>
         </div>
