Refactor Settings view

--- a/Views/Account/ChangePassword.cshtml
+++ b/Views/Account/ChangePassword.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = User.Identity.Name;
+    ViewData["Title"] = "Change password";
     Layout = "_Layout";
 }
-@model ProfileEditUser
+@model ChangePasswordDto
 
 <div class="row" style="margin-top:10vh;">
     <div class="d-flex justify-content-center">
