--- a/Views/Account/UserSettings.cshtml
+++ b/Views/Account/UserSettings.cshtml
@@ -2,32 +2,23 @@
     ViewData["Title"] = "Settings";
     Layout = "_layout";
 }
-@model SettingsUserDto
 <div class="row" style="margin-top:10vh;">
     <div class="d-flex justify-content-center">
-        <div class="card" style="width:80vh;">
+        <div class="card" style="width:50vh;">
             <div class="card-header">
                 <h5>Settings</h5>
             </div>
             <div class="card-body">
-                <section class="border-top">
-                    <h5 class="mt-2">Color</h5>
-                    <form asp-controller="account" asp-action="color">
-                        <div class="validation text-danger" asp-validation-summary="All"></div>
-                        <div class="form-group mt-3">
-                            <label>Update color</label>
-                            <select asp-for="Color" class="form-control">
-                                @foreach (var item in UserColor.Colors)
-                                {
-                                    <option>@item</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="form-group mt-3 text-center">
-                            <button type="submit" class="btn btn-primary">Submit</button>
-                        </div>
-                    </form>
-                </section>
+                <div class="row text-start">
+                    <div class="col-12 mt-2">
+                        <i class="bi bi-lock"></i>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="changepassword" class="btn btn-link text-start" role="button">Change password</a>
+                    </div>
+                    <div class="col-12 mt-2">
+                        <i class="bi bi-palette"></i>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="changecolor" class="btn btn-link text-start" role="button">Change color</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
