--- a/Views/Account/ChangeTheme.cshtml
+++ b/Views/Account/ChangeTheme.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Change Color";
+    ViewData["Title"] = "Change theme";
     Layout = "_Layout";
 }
-@model ChangeColorDto
+@model ChangeThemeDto
 
 <div class="row" style="margin-top:10vh;">
     <div class="d-flex justify-content-center">
@@ -11,12 +11,12 @@
                 <h5>Change password</h5>
             </div>
             <div class="card-body">
-                <form asp-controller="account" asp-action="changecolor">
+                <form asp-controller="account" asp-action="changetheme">
                     <div class="validation text-danger" asp-validation-summary="All"></div>
                     <div class="form-group mt-3">
-                        <label>Update color</label>
-                        <select asp-for="Color" class="form-control">
-                        @foreach (var item in UserColor.Colors)
+                        <label>Update theme</label>
+                        <select asp-for="Theme" class="form-control">
+                        @foreach (var item in UserTheme.Themes)
                         {
                             <option>@item</option>
                         }
