--- a/Views/Account/UserSettings.cshtml
+++ b/Views/Account/UserSettings.cshtml
@@ -18,6 +18,10 @@
                         <i class="bi bi-palette"></i>
                         <a style="text-decoration: none;" asp-controller="account" asp-action="changecolor" class="btn btn-link text-start" role="button">Change color</a>
                     </div>
+                    <div class="col-12 mt-2">
+                        <i class="bi bi-easel2"></i>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="changetheme" class="btn btn-link text-start" role="button">Change theme</a>
+                    </div>
                 </div>
             </div>
         </div>
