--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -13,7 +13,7 @@
         <th scope="col">Added at</th>
         <th scope="col">Block status</th>
         <th scope="col">User role</th>
-        <th scope="col">Color</th>
+        <th scope="col">Theme</th>
         <th scope="col">Action</th>
         </tr>
     </thead>
@@ -26,7 +26,7 @@
             <td class="text-warning">@user.CreatedTime.ToString("D")</td>
             <td class="text-info">@user.Block</td>
             <td class="text-warning">@user.Role</td>
-            <td style="color:@user.Color">@user.Color</td>
+            <td class="text-info">@user.Theme</td>
             <td><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id" class="btn btn-info btn-sm">Edit</a></td>
         </tr>
     }
