--- a/Views/Shared/_SimpleLayout.cshtml
+++ b/Views/Shared/_SimpleLayout.cshtml
@@ -7,7 +7,7 @@
     <header style="position:relative;">
         <nav id="navbar_top" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3 bg-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-music-note-list"></i> Stock Band</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Stock Band</a>
             </div>
         </nav>
     </header>
