--- a/Views/Account/UserLog.cshtml
+++ b/Views/Account/UserLog.cshtml
@@ -29,8 +29,8 @@
 
  <div class="row pagginationDiv">
     <div class="col-12">
-        <nav class="nav justify-content-center">
-            <ul class="pagination">
+        <nav class="nav justify-content-center border-top">
+            <ul class="pagination mt-2">
                 <li class="page-item @Model.PreviousDisabled()"><a class="page-link" asp-controller="account" asp-action="userlog" asp-route-pageNumber="@(Model.PageIndex-1)">Previous</a></li>
                 @foreach (var item in Model.Pages(1))
                 {
