--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,20 +21,38 @@
 
 </head>
 <body class="page-container">
-    <header style="position:relative;">
-        <nav id="navbar_top" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3 bg-nav">
+    <header>
+        <nav id="navbar_top" class="navbar navbar-expand-lg navbar-toggleable-lg navbar-dark bg-nav">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-music-note-list"></i> Stock Band</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" asp-controller="Home" asp-action="index">Stock Band</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <partial name="_AdminNavItemsPartial"/>
+                <div class="collapse navbar-collapse" id="navbar-collapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <!--- admin ---><partial name="_AdminNavItemsPartial"/>
+                         <!--- home ---><li class="nav-item">
+                            <a class="nav-link" href="#">Home
+                                <span class="badge rounded-pill badge-notification bg-warning">1</span> <!--- new tracks count --->
+                            </a>
+                        </li>
+                        <!--- library ---><li class="nav-item">
+                            <a class="nav-link" href="#">Library</a>
+                        </li>
+                        <!--- upload ---><li class="nav-item">
+                            <a class="nav-link" href="#">Upload</a>
+                        </li>
+                        <!--- search ---><form class="d-flex input-group w-auto">
+                            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"/>
+                            <span class="input-group-text border-0" id="search-addon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </form>
                     </ul>
-                    <div class="mr-2">
-                        <partial name="_ProfilePartial"/>
+                    <div class="d-flex align-items-center">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <!--- userPanel ---><partial name="_ProfilePartial"/>
+                        </ul>
                     </div>
                 </div>
             </div>
