--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,7 +11,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 5rem;
+    height: 50px;
     background-color: #262626;
 }
 .pagginationDiv {
