--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,4 +2,11 @@
     ViewData["Title"] = "Home";
     Layout = "_Layout";
 }
-
+<script>
+    $(document).ready(function(){
+        
+        $("#searchInput").autocomplete({
+            source: 'api/values/search'
+        });
+    });
+</script>
