--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,23 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <!--- admin ---><partial name="_AdminNavItemsPartial"/>
-                         <!--- home ---><li class="nav-item">
-                            <a class="nav-link" href="#">Home
-                                <span class="badge rounded-pill badge-notification bg-warning">1</span> <!--- new tracks count --->
-                            </a>
-                        </li>
-                        <!--- library ---><li class="nav-item">
-                            <a class="nav-link" href="#">Library</a>
-                        </li>
-                        <!--- upload ---><li class="nav-item">
-                            <a class="nav-link" href="#">Upload</a>
-                        </li>
-                        <!--- search ---><form class="d-flex input-group w-auto">
-                            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon"/>
-                            <span class="input-group-text border-0" id="search-addon">
-                                <i class="fas fa-search"></i>
-                            </span>
-                        </form>
+                        <!--- main ---><partial name="_MainItemsPartial"/>
                     </ul>
                     <div class="d-flex align-items-center">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -64,8 +48,6 @@
         </main>
     </div>
     <partial name="_footerPartial"/>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
