--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     if (User.Identity.IsAuthenticated && User.IsInRole(UserRoles.Roles[1]))
     {
-		<li class="nav-item dropdown">
+		<li class="nav-item dropdown px-lg-3">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Admin
                 <span class="badge rounded-pill badge-notification bg-info">1</span> <!--- new logs count --->
                 <span class="badge rounded-pill badge-notification bg-danger">1</span> <!--- new unique links count --->
