--- a/Views/Shared/_MainItemsPartial.cshtml
+++ b/Views/Shared/_MainItemsPartial.cshtml
@@ -1,1 +1,11 @@
-﻿
+﻿<!--- home ---><li class="nav-item px-lg-3">
+    <a class="nav-link" asp-controller="Home" asp-action="index">Home
+        <span class="badge rounded-pill badge-notification bg-warning">1</span> <!--- new tracks count --->
+    </a>
+</li>
+<!--- library ---><li class="nav-item px-lg-3">
+    <a class="nav-link" href="#">Library</a>
+</li>
+<!--- upload ---><li class="nav-item px-lg-3">
+    <a class="nav-link" href="#">Upload</a>
+</li>
