--- a/Views/Shared/_ProfilePartial.cshtml
+++ b/Views/Shared/_ProfilePartial.cshtml
@@ -2,9 +2,9 @@
 	string color = User.FindFirst(x => x.Type == "Color").Value;
 }
 <li class="nav-item dropdown">
-    <button class="btn btn-link dropdown-toggle p-0" style="text-decoration: none; color:@color;" type="button" id="dropdownMenuUserPanel" data-bs-toggle="dropdown" aria-expanded="false">
-		@User.Identity.Name
-	</button>
+    <a class="nav-link dropdown-toggle" style="color:@color" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        @User.Identity.Name
+    </a>
     <ul class="dropdown-menu dropdownCustom" aria-labelledby="dropdownMenuUserPanel">
         <li>
             <a class="dropdown-item" asp-controller="account" asp-action="userlog">Logs</a>
