--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,10 +30,6 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-<<<<<<< HEAD
-                        <!--- admin ---><partial name="_AdminNavItemsPartial"/>
-                        <!--- main ---><partial name="_MainItemsPartial"/>
-=======
                         <!--- admin --->
                         <partial name="_AdminNavItemsPartial"/>
                          <!--- home --->
@@ -50,7 +46,6 @@
                             <a class="nav-link" href="#">Upload</a>
                         </li>
                         
->>>>>>> 72fef4f
                     </ul>
                     <div class="d-flex align-items-center">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -68,6 +63,8 @@
         </main>
     </div>
     <partial name="_footerPartial"/>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
