add uniquelinkpanel for admin

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using StockBand.Models
 @using StockBand.Services
 @using StockBand.Data
+@using StockBand.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
