--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -15,6 +15,9 @@
                 <li>
                     <a class="dropdown-item" asp-controller="admin" asp-action="uniquelink">Unique link</a>
                 </li>
+                <li>
+                    <a class="dropdown-item" asp-controller="admin" asp-action="uniquelinkpanel">Unique link panel</a>
+                </li>
             </ul>
         </li>
     }
