--- a/Views/Shared/_headPartial.cshtml
+++ b/Views/Shared/_headPartial.cshtml
@@ -15,8 +15,6 @@
 }
 
 <link rel="stylesheet" href="@href" asp-append-version="true" />
-
-
 <link rel="stylesheet" href="~/css/site.css"/>
-<script src="https://kit.fontawesome.com/72752b8346.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="~/css/datatables.css"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
