Add search on paginated pages

--- a/Views/Admin/CreateUser.cshtml
+++ b/Views/Admin/CreateUser.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Unique link";
+    ViewData["Title"] = "Create user";
     Layout = "_Layout";
 }
 @model string
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-center">
         <div class="card" style="width:50vh;">
             <div class="card-header">
-                <h5>Edit user</h5>
+                <h5>Create user</h5>
             </div>
             <div class="card-body">
                 <div class="input-group mb-3">
