--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -13,7 +13,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="dropdown-item" asp-controller="admin" asp-action="uniquelink">Unique link</a>
+                    <a class="dropdown-item" asp-controller="admin" asp-action="createuser">Create user</a>
                 </li>
                 <li>
                     <a class="dropdown-item" asp-controller="admin" asp-action="uniquelinkpanel">Unique link panel</a>
