--- a/Views/Account/UserLog.cshtml
+++ b/Views/Account/UserLog.cshtml
@@ -2,9 +2,22 @@
     ViewData["Title"] = "Logs";
     Layout = "_Layout";
 }
-
-
 @model PaginetedList<UserLog>
+<div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-3">
+        <form method="get" asp-controller="account" asp-action="userlog" autocomplete="off">
+            <div class="input-group mb-3">
+                <input type="text" name="search" class="form-control" placeholder="search">
+                <div class="input-group-prepend">
+                    <button class="btn btn-success" type="submit">Search</button>
+                    <a asp-controller="account" asp-action="userlog" class="btn btn-warning" role="button">Clear</a>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+
 <div class="table-responsive scrollable">
     <table class="table text-nowrap">
     <thead>
