--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -40,7 +40,7 @@
             <tr>
                 <th class="text-warning" scope="row">@user.Id</th>
                 <td style="color:@user.Color;">@user.Name</td>
-                <td class="text-warning">@user.CreatedTime.ToString("D")</td>
+                <td class="text-warning">@user.CreatedTime</td>
                 <td class="text-info">@user.Block</td>
                 <td class="text-warning">@user.Role</td>
                 <td class="text-info">@user.Theme</td>
