--- a/Views/Account/UserLog.cshtml
+++ b/Views/Account/UserLog.cshtml
@@ -35,7 +35,7 @@
         {
             <tr>
                 <th class="text-warning" scope="row">@log.Guid</th>
-                <td class="text-warning">@log.CreatedDate.ToString("F")</td>
+                <td class="text-warning">@log.CreatedDate</td>
                 <td class="text-info">@log.Action</td>
             </tr>
         }       
