--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -16,7 +16,7 @@
                     <a class="dropdown-item" asp-controller="admin" asp-action="createuser">Create user</a>
                 </li>
                 <li>
-                    <a class="dropdown-item" asp-controller="admin" asp-action="uniquelinkpanel">Unique link panel</a>
+                    <a class="dropdown-item" asp-controller="link" asp-action="uniquelinkpanel">Unique link panel</a>
                 </li>
             </ul>
         </li>
